--- a/scss/variables.css
+++ b/scss/variables.css
@@ -14,6 +14,10 @@
   color: white;
 }
 
+.color_footer-txt {
+  color: #4f4f4f;
+}
+
 .backgorund_color-brown {
   color: #3f2b22;
 }
@@ -99,6 +103,8 @@ li {
 .item__card .wrapper-img img {
   width: 100%;
   height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .item__card .wrapper-img .overlay-bg {
@@ -131,6 +137,7 @@ li {
   color: #d1d1d1;
   -webkit-transition: .3s ease-out;
   transition: .3s ease-out;
+  line-height: 23px;
 }
 
 .item__card:hover .overlay-bg {
