--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -10,6 +10,9 @@
 .color_white{
     color: white;
 }
+.color_footer-txt{
+    color: #4f4f4f;
+}
 .backgorund_color-brown{
     color: #3f2b22;   
 }
@@ -86,6 +89,7 @@ li{
                         img{
                             width: 100%;
                             height: 100%;
+                            object-fit: cover;
                         }   
                         .overlay-bg{
                             position: absolute;
@@ -112,6 +116,7 @@ li{
                             margin-top: 10px;
                             color: #d1d1d1;
                             transition: .3s ease-out;
+                            line-height: 23px;
                         }
                         
                     }
